portfolio: fix text alignment (again)

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -205,6 +205,7 @@ use this only if min-width>767px */
 
 .portfolio-text-div {
   align-self: flex-end;
+  width: 100%;
 }
 
 .portfolio-customer-container {
@@ -214,17 +215,8 @@ use this only if min-width>767px */
 }
 
 .portfolio-img {
-  /* max-width: 150px; */
-  /* width: auto; */
-  /* height: 7px; */
-  /* height: 10%; */
-  /* height: 100px; */
   height: 100px;
   width: auto;
   margin-left: auto;
   margin-right: auto;
-  /* object-fit: contain; */
-  /* align-self: flex-start; */
-  /* display: block; */
-  /* flex: 0 0 100%; */
 }
